--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "yarn": "1"
   },
   "dependencies": {
+    "mongodb": "^4.5.0",
     "next": "latest",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "uuid": "^8.3.2"
   },
   "license": "MIT",
   "keywords": [],
